--- a/src/container/index.hbs
+++ b/src/container/index.hbs
@@ -10,7 +10,10 @@
     <div class='task1  task'>
     </div>
   </div>
-</div> 
+</div>
+<div class="box"><pre>.task1 {
+  background: green;
+}<br></pre></div> 
 
 {{> title header='Завдання 2' description='Встановіть елементу .task2 зображення на фон з посилання /img/img-400x200.jpg'}} 
 <div class="wrapper">
@@ -19,7 +22,10 @@
     <div class='task2  task'>
     </div>
   </div>
-</div> 
+</div>
+<div class="box"><pre>.task2 {
+  background-image: url('/img/img-400x200.jpg');
+}<br></pre></div> 
 
  {{> title header='Завдання 3' description='Встановіть елементу .task3 лінійний градієнт на фон від жовтого до червоного'}} 
 <div class="wrapper">
@@ -30,6 +36,9 @@
     </div>
   </div>
 </div>
+<div class="box"><pre>.task3 {
+  background-image: linear-gradient(yellow, red);
+}<br></pre></div>
 
  {{> title header='Завдання 4' description='Встановіть елементу .task4 радіальний градієнт на фон closest-side, #3f87a6, #ebf8e1, #f69d3c'}} 
 <div class="wrapper">
@@ -40,6 +49,18 @@
     </div>
   </div>
 </div>
+<div class="box"><pre>.task4 {
+  background-image: radial-gradient(
+    closest-side,
+    #3f87a6,
+    #ebf8e1,
+    #f69d3c);<br>
+/* ellipse,
+    #3f87a6 0%,
+    #ebf8e1 35%,
+    #f69d3c 70% */
+}<br></pre>
+</div>
 
 {{> title header='Завдання 5' description='Встановіть елементу .task5 конічний градієнт на фон  from 3.1416rad at 10% 50%, #e66465, #9198e5'}} 
 <div class="wrapper">
@@ -49,6 +70,13 @@
     </div>
   </div>
 </div>
+<div class="box"><pre>.task5 {
+  background-image: conic-gradient(
+    from 3.1416rad at 10% 50%,
+    #e66465,
+    #9198e5
+  );
+}<br></pre></div>
 
  {{> title header='Завдання 6' description='Встановіть елементу .task6 повторення фонового зображення по горизонталі'}} 
 <div class="wrapper">
@@ -58,6 +86,10 @@
     </div>
   </div>
 </div>
+<div class="box"><pre>.task6 {
+  background-image: url('/img/img-400x200.jpg');
+  background-repeat: repeat-x;
+}<br></pre></div>
 
  {{> title header='Завдання 7' description='Встановіть елементу .task7 повторення фонового зображення по вертикаль'}} 
 <div class="wrapper">
@@ -67,6 +99,10 @@
     </div>
   </div>
 </div>
+<div class="box"><pre>.task7 {
+  background-image: url('/img/img-400x200.jpg');
+  background-repeat: repeat-y;
+}<br></pre></div>
 
  {{> title header='Завдання 8' description='Вимкніть елементу .task8 повторення фонового зображення'}} 
 <div class="wrapper">
@@ -76,6 +112,10 @@
     </div>
   </div>
 </div>
+<div class="box"><pre>.task8 {
+  background-image: url('/img/img-400x200.jpg');
+  background-repeat: no-repeat;
+}<br></pre></div>
 
  {{> title header='Завдання 9' description='Встановіть елементу .task9 повторення фонового зображення з пропорційним збільшенням проміжків, якщо зображення не вміщається повністю'}} 
 <div class="wrapper">
@@ -85,6 +125,10 @@
     </div>
   </div>
 </div>
+<div class="box"><pre>.task9 {
+  background-image: url('/img/img-400x200.jpg');
+  background-repeat: space;
+}<br></pre></div>
 
  {{> title header='Завдання 10' description='Встановіть елементу .task10 повторення фонового зображення з пропорційним змінення розміру проміжків, з заповненням всього елементу'}} 
 <div class="wrapper">
@@ -94,6 +138,10 @@
     </div>
   </div>
 </div>
+<div class="box"><pre>.task10 {
+  background-image: url('/img/img-400x200.jpg');
+  background-repeat: round;
+}<br></pre></div>
 
  {{> title header='Завдання 11' description='Встановіть елементу .task11 прокручення фонового зображення разом зі сторінкою'}} 
 <div class="wrapper">
@@ -103,6 +151,10 @@
     </div>
   </div>
 </div>
+<div class="box"><pre>.task11 {
+  background-image: url('/img/img-400x200.jpg');
+  background-attachment: scroll;
+}<br></pre></div>
 
  {{> title header='Завдання 12' description='Встановіть елементу .task12 нерухоме фонове зображення при прокрученні сторінки'}} 
 <div class="wrapper">
@@ -112,6 +164,10 @@
     </div>
   </div>
 </div>
+<div class="box"><pre>.task12 {
+  background-image: url('/img/img-400x200.jpg');
+  background-attachment: fixed;
+}<br></pre></div>
 
  {{> title header='Завдання 13' description='Встановіть елементу .task13 прокручення фонового зображення разом з контентом'}} 
 <div class="wrapper">
@@ -121,6 +177,10 @@
     </div>
   </div>
 </div>
+<div class="box"><pre>.task13 {
+  background-image: url('/img/img-400x200.jpg');
+  background-attachment: local;
+}<br></pre></div>
 
  {{> title header='Завдання 14' description='Встановіть елементу .task14 фонове зображення по центру'}} 
 <div class="wrapper">
@@ -130,6 +190,10 @@
     </div>
   </div>
 </div>
+<div class="box"><pre>.task14 {
+  background-image: url('/img/img-400x200.jpg');
+  background-position: center;
+}<br></pre></div>
 
  {{> title header='Завдання 15' description='Встановіть елементу .task15 фонове зображення зверху'}} 
 <div class="wrapper">
@@ -139,6 +203,10 @@
     </div>
   </div>
 </div>
+<div class="box"><pre>.task15 {
+  background-image: url('/img/img-400x200.jpg');
+  background-position: top;
+}<br></pre></div>
 
  {{>  title header='Завдання 16' description='Встановіть елементу .task16 фонове зображення знизу'}} 
 <div class="wrapper">
@@ -148,6 +216,10 @@
     </div>
   </div>
 </div>
+<div class="box"><pre>.task16 {
+  background-image: url('/img/img-400x200.jpg');
+  background-position: bottom;
+}<br></pre></div>
 
  {{>  title header='Завдання 17' description='Встановіть елементу .task17 фонове зображення зліва'}} 
 <div class="wrapper">
@@ -157,6 +229,10 @@
     </div>
   </div>
 </div>
+<div class="box"><pre>.task17 {
+  background-image: url('/img/img-400x200.jpg');
+  background-position: left;
+}<br></pre></div>
 
  {{>  title header='Завдання 18' description='Встановіть елементу .task18 фонове зображення справу'}} 
 <div class="wrapper">
@@ -166,6 +242,10 @@
     </div>
   </div>
 </div>
+<div class="box"><pre>.task18 {
+  background-image: url('/img/img-400x200.jpg');
+  background-position: right;
+}<br></pre></div>
 
  {{>  title header='Завдання 19' description='Встановіть елементу .task19 фонове зображення в 100px від початку контейнеру'}} 
 <div class="wrapper">
@@ -175,6 +255,10 @@
     </div>
   </div>
 </div>
+<div class="box"><pre>.task19 {
+  background-image: url('/img/img-400x200.jpg');
+  background-position: 100px;
+}<br></pre></div>
 
  {{> title header='Завдання 20' description='Встановіть елементу .task20 автомтичний розмір фонового зображення'}} 
 <div class="wrapper">
@@ -184,6 +268,10 @@
     </div>
   </div>
 </div>
+<div class="box"><pre>.task20 {
+  background-image: url('/img/img-400x200.jpg');
+  background-size: auto;
+}<br></pre></div>
 
  {{> title header='Завдання 21' description='Встановіть елементу .task21 розмір фонового зображення 600px'}} 
 <div class="wrapper">
@@ -193,6 +281,10 @@
     </div>
   </div>
 </div>
+<div class="box"><pre>.task21 {
+  background-image: url('/img/img-400x200.jpg');
+  background-size: 600px;
+}<br></pre></div>
 
  {{> title header='Завдання 22' description='Встановіть елементу .task22 розмір фонового зображення 50% відсотків від контейнера'}} 
 <div class="wrapper">
@@ -202,6 +294,10 @@
     </div>
   </div>
 </div>
+<div class="box"><pre>.task22 {
+  background-image: url('/img/img-400x200.jpg');
+  background-size: 50%;
+}<br></pre></div>
 
  {{> title header='Завдання 23' description='Для елементу .task23 зробіть щоб фонове зображення вміщалось в доступну площу зі збереженням співвідношення сторін'}} 
 <div class="wrapper">
@@ -211,6 +307,10 @@
     </div>
   </div>
 </div>
+<div class="box"><pre>.task23 {
+  background-image: url('/img/img-400x200.jpg');
+  background-size: contain;
+}<br></pre></div>
 
  {{> title header='Завдання 24' description='Для елементу .task24 розтяніть фонове зображення на всю площу'}} 
 <div class="wrapper">
@@ -220,6 +320,10 @@
     </div>
   </div>
 </div>
+<div class="box"><pre>.task24 {
+  background-image: url('/img/img-400x200.jpg');
+  background-size: cover;
+}<br></pre></div>
 
  {{> title header='Завдання 25 (продвинуте необовязкове)' description='Для елементу .task25 відображуйте фон в межах рамки'}} 
 <div class="wrapper">
@@ -229,6 +333,12 @@
     </div>
   </div>
 </div>
+<div class="box"><pre>.task25 {
+  border: 20px dashed black;
+  background-image: url('/img/img-400x200.jpg');
+  box-sizing: border-box;
+  background-clip: border-box;
+}<br></pre></div>
 
  {{> title header='Завдання 26 (продвинуте необовязкове)' description='Для елементу .task26 відображуйте фон в межах полів'}} 
 <div class="wrapper">
@@ -238,6 +348,12 @@
     </div>
   </div>
 </div>
+<div class="box"><pre>.task26 {
+  background-image: url('/img/img-400x200.jpg');
+  border: 20px dashed black;
+  box-sizing: border-box;
+  background-clip: padding-box;
+}<br></pre></div>
 
  {{>  title header='Завдання 27 (продвинуте необовязкове)' description='Для елементу .task27 відображуйте фон в межах контенту тексту (для коректної роботи властивості ії треба використовувати css префікс -webkit- )'}} 
 <div class="wrapper">
@@ -248,7 +364,13 @@
     </div>
   </div>
 </div>
-
+<div class="box"><pre>.task27 {
+  background-image: url('/img/img-400x200.jpg');
+  font-size: 120px;
+  font-weight: 900;
+  color: transparent;
+  -webkit-background-clip: text;
+}<br></pre></div>
 
  {{>  title header='Завдання 28 (продвинуте необовязкове)' description='Для елементу .task28 відображуйте фон в рамках обмежених зовнішнім полем елемента'}} 
 <div class="wrapper">
@@ -259,6 +381,13 @@
     </div>
   </div>
 </div>
+<div class="box"><pre>.task28 {
+  background-image: url('/img/img-400x200.jpg');
+  box-sizing: border-box;
+  border: 20px dashed black;
+  background-repeat: no-repeat;
+  background-origin: border-box;
+}<br></pre></div>
 
  {{>  title header='Завдання 29 (продвинуте необовязкове)' description='Для елементу .task29 відображуйте фон в рамках обмежених внутрішнім полем елемента'}} 
 <div class="wrapper">
@@ -269,6 +398,14 @@
     </div>
   </div>
 </div>
+<div class="box"><pre>.task29 {
+  background-image: url('/img/img-400x200.jpg');
+  box-sizing: border-box;
+  border: 20px dashed black;
+  padding: 20px;
+  background-repeat: no-repeat;
+  background-origin: padding-box;
+}<br></pre></div>
 
  {{>  title header='Завдання 30 (продвинуте необовязкове)' description='Для елементу .task30 відображуйте фон починаючи з контенту'}} 
 <div class="wrapper">
@@ -279,10 +416,16 @@
     </div>
   </div>
 </div>
-
-
-
-
+<div class="box"><pre>.task30 {
+  background-image: url('/img/img-400x200.jpg');
+  box-sizing: border-box;
+  border: 20px dashed black;
+  background-repeat: no-repeat;
+  font-size: 100px;
+  font-weight: 900;
+  padding: 60px;
+  background-origin: content-box;
+}<br></pre></div>
 
  {{>  title header='Завдання 31 (продвинуте необовязкове)' description='Для елементу .task32 встановіть рамкою лінійний градієнт від синього до зеленого'}} 
 <div class="wrapper">
@@ -293,6 +436,12 @@
     </div>
   </div>
 </div>
+<div class="box"><pre>.task31 {
+  border-image-slice: 1%;
+  border-image-width: 40px;
+  box-sizing: border-box;
+  border-image-source: linear-gradient(blue, green);
+}<br></pre></div>
 
  {{>  title header='Завдання 32 (продвинуте необовязкове)' description='Для елементу .task32 встановіть рамкою зображення радіальний градієнт red 5%, green 15%, blue 60%'}} 
 <div class="wrapper">
@@ -303,7 +452,16 @@
     </div>
   </div>
 </div>
-
+<div class="box"><pre>.task32 {
+  border-image-slice: 1%;
+  border-image-width: 40px;
+  box-sizing: border-box;
+  border-image-source: radial-gradient(
+    red 5%,
+    green 15%,
+    blue 60%
+  );
+}<br></pre></div>
 
 {{> title header='Завдання 33 (продвинуте необовязкове)' description='Для елементу .task33 встановіть повторення зображення рамки щоб зображення рамки розтянулось на всю довжину границі'}} 
 <div class="wrapper">
@@ -313,6 +471,10 @@
     </div>
   </div>
 </div>
-
-
-
+<div class="box"><pre>.task33 {
+  border-image-source: url('/img/img-400x200.jpg');
+  box-sizing: border-box;
+  border-image-width: 40px;
+  border-image-slice: 10;
+  border-image-repeat: stretch;
+}<br></pre></div>
